--- a/po/fr.po
+++ b/po/fr.po
@@ -6,16 +6,17 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-06-03 23:22-0400\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2025-06-03 23:33-0400\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.6\n"
 
 #: data/interfaces/app_window.ui:12
 msgctxt "menu"
@@ -45,7 +46,7 @@ msgstr ""
 #: data/interfaces/app_window.ui:34
 msgctxt "menu"
 msgid "Preferences"
-msgstr ""
+msgstr "Préferences"
 
 #: data/interfaces/app_window.ui:38
 msgctxt "menu"
@@ -55,7 +56,7 @@ msgstr ""
 #: data/interfaces/app_window.ui:42
 msgctxt "menu"
 msgid "About"
-msgstr ""
+msgstr "Du coup"
 
 #: data/interfaces/clean_dialog.ui:28
 msgctxt "button"
@@ -189,7 +190,7 @@ msgstr ""
 #: data/interfaces/unit_control_panel.ui:44
 msgctxt "controls"
 msgid "_Start"
-msgstr ""
+msgstr "Démarer"
 
 #: data/interfaces/unit_control_panel.ui:93
 msgctxt "controls"
