--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,22 +1,22 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# Portuguese translations for PACKAGE package.
+# Copyright (C) 2025 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+#  <plr@archdell>, 2025.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-06-06 16:22-0400\n"
-"PO-Revision-Date: 2025-06-03 23:33-0400\n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"Language: fr\n"
+"PO-Revision-Date: 2025-06-06 16:50-0400\n"
+"Last-Translator:  <plr@archdell>\n"
+"Language-Team: Brazilian Portuguese <ldpbr-"
+"translation@lists.sourceforge.net>\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=ASCII\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.6\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: data/interfaces/app_window.ui:12
 msgctxt "menu"
@@ -46,7 +46,7 @@ msgstr ""
 #: data/interfaces/app_window.ui:34
 msgctxt "menu"
 msgid "Preferences"
-msgstr "Préferences"
+msgstr ""
 
 #: data/interfaces/app_window.ui:38
 msgctxt "menu"
@@ -56,7 +56,7 @@ msgstr ""
 #: data/interfaces/app_window.ui:42
 msgctxt "menu"
 msgid "About"
-msgstr "Du coup"
+msgstr ""
 
 #: data/interfaces/clean_dialog.ui:28
 msgctxt "button"
@@ -190,12 +190,12 @@ msgstr ""
 #: data/interfaces/unit_control_panel.ui:44
 msgctxt "controls"
 msgid "_Start"
-msgstr "Démarer"
+msgstr ""
 
 #: data/interfaces/unit_control_panel.ui:68
 msgctxt "controls"
 msgid "S_top"
-msgstr "Arrê_ter"
+msgstr ""
 
 #: data/interfaces/unit_control_panel.ui:69
 msgctxt "controls tooltip"
@@ -203,15 +203,14 @@ msgid "Stop unit"
 msgstr ""
 
 #: data/interfaces/unit_control_panel.ui:88
-#, fuzzy
 msgctxt "controls tooltip"
 msgid "Restart unit"
-msgstr "Redémarer"
+msgstr ""
 
 #: data/interfaces/unit_control_panel.ui:93
 msgctxt "controls"
 msgid "Restart"
-msgstr "Redémarer"
+msgstr ""
 
 #: data/interfaces/unit_info_panel.ui:29
 msgid "Show all _Properties"
@@ -220,7 +219,7 @@ msgstr ""
 #. std::env::set_var("DBUS_SESSION_BUS_ADDRESS", "unix:path=/run/user/1000/bus");
 #: src/main.rs:75 src/main.rs:77
 msgid "Program starting up"
-msgstr "Le Programe démarre"
+msgstr ""
 
 #: src/main.rs:84
 msgctxt "flatpack"
