--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-06 16:22-0400\n"
+"POT-Creation-Date: 2025-06-09 17:09-0400\n"
 "PO-Revision-Date: 2025-06-06 16:50-0400\n"
 "Last-Translator:  <plr@archdell>\n"
 "Language-Team: English (British) <(nothing)>\n"
@@ -62,23 +62,40 @@ msgctxt "button"
 msgid "Clean"
 msgstr "Clean"
 
-#: data/interfaces/enable_unit_dialog.ui:79
+#: data/interfaces/enable_unit_dialog.ui:38
+#, fuzzy
+msgctxt "tooltip\n"
+msgid "Use Selected Unit"
+msgstr "Select Font"
+
+#: data/interfaces/enable_unit_dialog.ui:46
+msgctxt "tooltip"
+msgid "Browse for Unit file"
+msgstr ""
+
+#: data/interfaces/enable_unit_dialog.ui:87
 msgid "Stats Unit just after being enabled"
 msgstr "Stats Unit just after being enabled"
 
-#: data/interfaces/enable_unit_dialog.ui:98
+#: data/interfaces/enable_unit_dialog.ui:106
 msgctxt "menu"
 msgid "Reset"
 msgstr "Reset"
 
-#: data/interfaces/enable_unit_dialog.ui:106
+#: data/interfaces/enable_unit_dialog.ui:114
 msgctxt "menu"
 msgid "Enable"
 msgstr "Enable"
 
-#: data/interfaces/enable_unit_dialog.ui:120
+#: data/interfaces/enable_unit_dialog.ui:128
 msgid "Enable Unit File"
 msgstr "Enable Unit File"
+
+#: data/interfaces/ex_menu_button.ui:40
+#, fuzzy
+msgctxt "extented menu button"
+msgid "Clear"
+msgstr "Clean"
 
 #: data/interfaces/journal_panel.ui:27
 msgid "Clear journal events and refetch them"
@@ -92,6 +109,42 @@ msgstr ""
 #: data/interfaces/journal_panel.ui:60
 msgid "List the boots of the system"
 msgstr "List the boots of the system"
+
+#: data/interfaces/list_boots.ui:37
+msgctxt "boot list column"
+msgid "Index"
+msgstr ""
+
+#: data/interfaces/list_boots.ui:44
+msgctxt "boot list column"
+msgid "Offset"
+msgstr ""
+
+#: data/interfaces/list_boots.ui:52
+msgctxt "boot list column"
+msgid "Boot Id"
+msgstr ""
+
+#: data/interfaces/list_boots.ui:60
+msgctxt "boot list column"
+msgid "First Entry"
+msgstr ""
+
+#: data/interfaces/list_boots.ui:68
+msgctxt "boot list column"
+msgid "Last Entry"
+msgstr ""
+
+#: data/interfaces/list_boots.ui:75
+msgctxt "boot list column"
+msgid "Duration"
+msgstr ""
+
+#: data/interfaces/list_boots.ui:105
+#, fuzzy
+msgctxt "boot list dialog"
+msgid "List Boots"
+msgstr "List Boots"
 
 #: data/interfaces/mask_unit_dialog.ui:24
 #: data/interfaces/mask_unit_dialog.ui:75
@@ -189,15 +242,32 @@ msgstr ""
 "Start or Stop a Unit to see some appearing"
 
 #: data/interfaces/unit_control_panel.ui:16
-msgctxt "info"
-msgid "Enabled:"
+#, fuzzy
+msgctxt "control info"
+msgid "Enabled"
 msgstr "Enabled:"
+
+#: data/interfaces/unit_control_panel.ui:39
+#, fuzzy
+msgctxt "control tooltip"
+msgid "Start unit"
+msgstr "Restart"
 
 #. The start button
 #: data/interfaces/unit_control_panel.ui:44
 msgctxt "controls"
 msgid "_Start"
 msgstr "_Start"
+
+#: data/interfaces/unit_control_panel.ui:52
+msgctxt "control tooltip"
+msgid "Stop Modes"
+msgstr ""
+
+#: data/interfaces/unit_control_panel.ui:63
+msgctxt "control tooltip"
+msgid "Stop unit"
+msgstr ""
 
 #: data/interfaces/unit_control_panel.ui:68
 msgctxt "controls"
@@ -208,6 +278,12 @@ msgstr ""
 msgctxt "controls tooltip"
 msgid "Stop unit"
 msgstr ""
+
+#: data/interfaces/unit_control_panel.ui:77
+#, fuzzy
+msgctxt "control tooltip"
+msgid "Restart Modes"
+msgstr "Restart"
 
 #: data/interfaces/unit_control_panel.ui:88
 #, fuzzy
@@ -220,16 +296,134 @@ msgctxt "controls"
 msgid "Restart"
 msgstr "Restart"
 
+#: data/interfaces/unit_control_panel.ui:109
+msgctxt "controls menu"
+msgid "_More ..."
+msgstr ""
+
+#: data/interfaces/unit_control_panel.ui:143
+msgctxt "controls tab"
+msgid "Unit Info"
+msgstr ""
+
+#: data/interfaces/unit_control_panel.ui:153
+#, fuzzy
+msgctxt "controls tab"
+msgid "Dependencies"
+msgstr "Display Unit Dependencies"
+
+#: data/interfaces/unit_control_panel.ui:163
+msgctxt "controls tab"
+msgid "File"
+msgstr ""
+
+#: data/interfaces/unit_control_panel.ui:173
+msgctxt "controls tab"
+msgid "Journal"
+msgstr ""
+
 #: data/interfaces/unit_info_panel.ui:29
 msgid "Show all _Properties"
 msgstr "Show all _Properties"
 
-#. std::env::set_var("DBUS_SESSION_BUS_ADDRESS", "unix:path=/run/user/1000/bus");
-#: src/main.rs:75 src/main.rs:77
-msgid "Program starting up"
-msgstr "Program starting up"
+#: data/interfaces/unit_list_panel.ui:48
+#, fuzzy
+msgctxt "list column"
+msgid "Unit"
+msgstr "Mask Unit"
 
-#: src/main.rs:84
+#: data/interfaces/unit_list_panel.ui:56
+msgctxt "list column"
+msgid "Type"
+msgstr ""
+
+#: data/interfaces/unit_list_panel.ui:64
+msgctxt "list column"
+msgid "Bus"
+msgstr ""
+
+#: data/interfaces/unit_list_panel.ui:72
+msgctxt "list column"
+msgid "State"
+msgstr ""
+
+#: data/interfaces/unit_list_panel.ui:80
+#, fuzzy
+msgctxt "list column"
+msgid "Preset"
+msgstr "Reset"
+
+#: data/interfaces/unit_list_panel.ui:88
+msgctxt "list column"
+msgid "Load"
+msgstr ""
+
+#: data/interfaces/unit_list_panel.ui:96
+msgctxt "list column"
+msgid "Active"
+msgstr ""
+
+#: data/interfaces/unit_list_panel.ui:104
+msgctxt "list column"
+msgid "Sub"
+msgstr ""
+
+#: data/interfaces/unit_list_panel.ui:112
+msgctxt "list column"
+msgid "Description"
+msgstr ""
+
+#: data/interfaces/unit_list_panel.ui:133
+msgctxt "list tooltip"
+msgid "Loaded Units Retrieved"
+msgstr ""
+
+#: data/interfaces/unit_list_panel.ui:138
+msgctxt "list info"
+msgid "Loaded Units Retrieved"
+msgstr ""
+
+#: data/interfaces/unit_list_panel.ui:149
+msgctxt "list tooltip"
+msgid "Unit Files Retrieved"
+msgstr ""
+
+#: data/interfaces/unit_list_panel.ui:154
+msgctxt "list info"
+msgid "Unit Files Retrieved"
+msgstr ""
+
+#: data/interfaces/unit_list_panel.ui:165
+msgctxt "list tooltip"
+msgid "Units displayed"
+msgstr ""
+
+#: data/interfaces/unit_list_panel.ui:170
+msgctxt "list info"
+msgid "Units Displayed"
+msgstr ""
+
+#: data/interfaces/unit_list_panel.ui:180
+msgctxt "list info tooltip"
+msgid "Hide bottom bar"
+msgstr ""
+
+#: data/interfaces/unit_list_panel.ui:225
+msgctxt "list page description"
+msgid ""
+"No units returned, set environmental variable <b>RUST_LOG=info</b> to see "
+"what happend."
+msgstr ""
+
+#: data/interfaces/unit_list_panel.ui:227
+msgctxt "list page title"
+msgid "Something went wrong"
+msgstr ""
+
+#: src/main.rs:82
 msgctxt "flatpack"
 msgid "Flatpak version"
 msgstr "Flatpak version"
+
+#~ msgid "Program starting up"
+#~ msgstr "Program starting up"
