--- a/po/fr.po
+++ b/po/fr.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-09 21:56-0400\n"
-"PO-Revision-Date: 2025-06-09 22:22-0400\n"
+"POT-Creation-Date: 2025-06-10 09:23-0400\n"
+"PO-Revision-Date: 2025-06-10 09:30-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -58,6 +58,21 @@ msgctxt "menu"
 msgid "About"
 msgstr "À propos"
 
+#: data/interfaces/app_window.ui:79
+msgctxt "title"
+msgid "SysD Manager"
+msgstr ""
+
+#: data/interfaces/app_window.ui:85
+msgctxt "top button tooltip"
+msgid "Open Search Bar"
+msgstr ""
+
+#: data/interfaces/app_window.ui:92
+msgctxt "top button tooltip"
+msgid "Refresh Unit List"
+msgstr ""
+
 #: data/interfaces/clean_dialog.ui:28
 msgctxt "button"
 msgid "Clean"
@@ -94,7 +109,7 @@ msgstr ""
 #: data/interfaces/ex_menu_button.ui:40
 msgctxt "extented menu button"
 msgid "Clear"
-msgstr ""
+msgstr "Effacer"
 
 #: data/interfaces/journal_panel.ui:27
 msgid "Clear journal events and refetch them"
@@ -152,17 +167,172 @@ msgstr ""
 msgid "Mask Unit"
 msgstr ""
 
+#. group
+#: data/interfaces/preferences.ui:21
+msgctxt "preference"
+msgid "General"
+msgstr "Général"
+
+#. row
+#: data/interfaces/preferences.ui:24
+#, fuzzy
+msgctxt "preference"
+msgid "Preferred Color Scheme"
+msgstr "Palette de couleurs préférée"
+
+#. row subtitle
+#: data/interfaces/preferences.ui:29
+msgctxt "preference"
+msgid "Application division orientation mode"
+msgstr ""
+
+#. row
+#: data/interfaces/preferences.ui:30
+msgctxt "preference"
+msgid "Orientation"
+msgstr "Orientation"
+
+#. row
+#: data/interfaces/preferences.ui:35
+msgctxt "preference"
+msgid " Change the format of printed timestamps"
+msgstr ""
+
+#. row
+#: data/interfaces/preferences.ui:36
+msgctxt "preference"
+msgid "Timestamp style"
+msgstr ""
+
+#. row
+#: data/interfaces/preferences.ui:41
+msgctxt "preference"
+msgid "The Monospace Font"
+msgstr ""
+
+#. row
+#: data/interfaces/preferences.ui:42
+msgctxt "preference"
+msgid "Text font"
+msgstr ""
+
 #: data/interfaces/preferences.ui:46
-msgctxt "button"
+msgctxt "preference"
 msgid "Default"
 msgstr "Défaut"
 
+#. button
 #: data/interfaces/preferences.ui:54
-msgctxt "button"
+msgctxt "preference"
 msgid "Select Font"
-msgstr "Choisir la font"
+msgstr "Choisir la police"
 
+#. group
+#: data/interfaces/preferences.ui:65
+#, fuzzy
+msgctxt "preference"
+msgid "Unit List"
+msgstr "Unité"
+
+#. subtitle
+#: data/interfaces/preferences.ui:68
+msgctxt "preference"
+msgid "Display Colors on unit list table cells, according to their content."
+msgstr ""
+
+#. title
+#: data/interfaces/preferences.ui:69
+msgctxt "preference"
+msgid "Display Colors"
+msgstr ""
+
+#. subtitle
+#: data/interfaces/preferences.ui:74
+msgctxt "preference"
+msgid "Display different totals regarding retrieved units"
+msgstr ""
+
+#. title
+#: data/interfaces/preferences.ui:75
+msgctxt "preference"
+msgid "Display Summay"
+msgstr ""
+
+#. title
+#: data/interfaces/preferences.ui:80
+msgctxt "preference"
+msgid "Columns Display Parameters"
+msgstr ""
+
+#. group
+#: data/interfaces/preferences.ui:87
+#, fuzzy
+msgctxt "preference"
+msgid "Unit File"
+msgstr "Unités affichées"
+
+#. subtitle
+#: data/interfaces/preferences.ui:90
+#, fuzzy
+msgctxt "preference"
+msgid "Display unit file line number"
+msgstr "Afficher le fichier de définition de l'unité"
+
+#. title
+#: data/interfaces/preferences.ui:91
+msgctxt "preference"
+msgid "Line number"
+msgstr ""
+
+#. subtitle
+#: data/interfaces/preferences.ui:102
+msgctxt "preference"
+msgid "Unit file highlight style"
+msgstr ""
+
+#. title
+#: data/interfaces/preferences.ui:103
+msgctxt "preference"
+msgid "Text Highlight"
+msgstr ""
+
+#. subtitle
+#: data/interfaces/preferences.ui:113
+msgctxt "preference"
+msgid "To see the logs in color"
+msgstr ""
+
+#. title
+#: data/interfaces/preferences.ui:114
+#, fuzzy
+msgctxt "preference"
+msgid "Journal colors"
+msgstr "Journal"
+
+#. title
+#: data/interfaces/preferences.ui:135
+msgctxt "preference"
+msgid "Journal's events batch size"
+msgstr ""
+
+#. subtitle
+#: data/interfaces/preferences.ui:148
+msgctxt "preference"
+msgid ""
+"The journal event maximum characters\n"
+"<i>0 to no limit</i>"
+msgstr ""
+
+#. title
+#: data/interfaces/preferences.ui:151
+msgctxt "preference"
+msgid "Journal's event max size"
+msgstr ""
+
+#. dialog
 #: data/interfaces/preferences.ui:165
+#, fuzzy
+msgctxt "preference"
 msgid "Preferences"
 msgstr "Préférences"
 
@@ -307,9 +477,18 @@ msgctxt "controls tab"
 msgid "Journal"
 msgstr "Journal"
 
-#: data/interfaces/unit_info_panel.ui:29
-msgid "Show all _Properties"
+#. button
+#: data/interfaces/unit_info_panel.ui:17
+msgctxt "unit info"
+msgid "_Refresh"
 msgstr ""
+
+#. button
+#: data/interfaces/unit_info_panel.ui:29
+#, fuzzy
+msgctxt "unit info"
+msgid "Show all _Properties"
+msgstr "Afficher les préférences"
 
 #: data/interfaces/unit_list_panel.ui:48
 msgctxt "list column"
@@ -334,27 +513,27 @@ msgstr "État"
 #: data/interfaces/unit_list_panel.ui:80
 msgctxt "list column"
 msgid "Preset"
-msgstr ""
+msgstr "Prérégler"
 
 #: data/interfaces/unit_list_panel.ui:88
 msgctxt "list column"
 msgid "Load"
-msgstr ""
+msgstr "Chargement"
 
 #: data/interfaces/unit_list_panel.ui:96
 msgctxt "list column"
 msgid "Active"
-msgstr ""
+msgstr "Activation"
 
 #: data/interfaces/unit_list_panel.ui:104
 msgctxt "list column"
 msgid "Sub"
-msgstr ""
+msgstr "Sous Activation"
 
 #: data/interfaces/unit_list_panel.ui:112
 msgctxt "list column"
 msgid "Description"
-msgstr ""
+msgstr "Description"
 
 #: data/interfaces/unit_list_panel.ui:133
 msgctxt "list tooltip"
@@ -388,7 +567,7 @@ msgstr ""
 
 #: data/interfaces/unit_list_panel.ui:180
 msgctxt "list info tooltip"
-msgid "Hide bottom bar"
+msgid "Hide Total Summary"
 msgstr ""
 
 #: data/interfaces/unit_list_panel.ui:225
@@ -421,7 +600,7 @@ msgstr "seconds ..."
 #: src/analyze/mod.rs:128
 msgctxt "analyse blame"
 msgid "Init time (ms)"
-msgstr "temps (ms)"
+msgstr "Temps (ms)"
 
 #: src/analyze/mod.rs:132
 msgctxt "analyse blame"
@@ -436,3 +615,17 @@ msgstr ""
 #: src/main.rs:79
 msgid "Program starting up"
 msgstr "Le Programme démarre"
+
+#: src/widget/app_window/menu.rs:193
+msgid "Thank you for your support"
+msgstr ""
+
+#: src/widget/preferences/data.rs:84 src/widget/preferences/data.rs:85
+msgctxt "dbus"
+msgid "User Session Bus"
+msgstr "Bus session utilisateur"
+
+#: src/widget/preferences/data.rs:86
+msgctxt "dbus"
+msgid "System & User Session Bus"
+msgstr "Bus système et Bus session utilisateur"
