--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-10 09:23-0400\n"
+"POT-Creation-Date: 2025-06-10 09:44-0400\n"
 "PO-Revision-Date: 2025-06-06 16:50-0400\n"
 "Last-Translator:  <plr@archdell>\n"
 "Language-Team: English (British) <(nothing)>\n"
@@ -187,7 +187,7 @@ msgstr ""
 #. row subtitle
 #: data/interfaces/preferences.ui:29
 msgctxt "preference"
-msgid "Application division orientation mode"
+msgid "Application's division orientation mode"
 msgstr ""
 
 #. row
@@ -199,7 +199,7 @@ msgstr ""
 #. row
 #: data/interfaces/preferences.ui:35
 msgctxt "preference"
-msgid " Change the format of printed timestamps"
+msgid "Change the format of printed timestamps"
 msgstr ""
 
 #. row
@@ -261,7 +261,7 @@ msgstr ""
 #. title
 #: data/interfaces/preferences.ui:75
 msgctxt "preference"
-msgid "Display Summay"
+msgid "Display Totals Summary"
 msgstr ""
 
 #. title
@@ -630,6 +630,7 @@ msgstr ""
 
 #: src/analyze/mod.rs:174
 #, rust-format
+msgctxt "analyse blame"
 msgid "{} seconds"
 msgstr ""
 
