--- a/po/fr.po
+++ b/po/fr.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-11 13:24-0400\n"
-"PO-Revision-Date: 2025-06-11 14:17-0400\n"
+"POT-Creation-Date: 2025-06-11 20:25-0400\n"
+"PO-Revision-Date: 2025-06-11 20:26-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -533,7 +533,7 @@ msgstr "Paramètres d'affichage des colonnes"
 #: data/interfaces/preferences.ui:87
 msgctxt "preference"
 msgid "Unit File"
-msgstr "Liste des Unités"
+msgstr "Fichier de l'unité"
 
 #. subtitle
 #: data/interfaces/preferences.ui:90
@@ -877,6 +877,30 @@ msgctxt "controls tab"
 msgid "Journal"
 msgstr "Journal"
 
+#. description
+#: data/interfaces/unit_file_panel.ui:16
+msgctxt "file"
+msgid "The  unit has no file associated"
+msgstr "L'unité n'a aucun fichier associé"
+
+#. title
+#: data/interfaces/unit_file_panel.ui:18
+msgctxt "file"
+msgid "No unit file"
+msgstr "Aucun fichier d'unité"
+
+#. label
+#: data/interfaces/unit_file_panel.ui:42
+msgctxt "file"
+msgid "File path:"
+msgstr "Chemin du fichier :"
+
+#. button
+#: data/interfaces/unit_file_panel.ui:59
+msgctxt "file"
+msgid "Save"
+msgstr "Enregister"
+
 #. button
 #: data/interfaces/unit_info_panel.ui:17
 msgctxt "unit info"
@@ -1157,40 +1181,70 @@ msgctxt "dbus"
 msgid "System"
 msgstr "Système"
 
-#: src/systemd/enums.rs:926
+#: src/systemd/enums.rs:929
 msgctxt "clean"
 msgid "_Runtime"
 msgstr "_Runtime"
 
-#: src/systemd/enums.rs:927
+#: src/systemd/enums.rs:930
 msgctxt "clean"
 msgid "_State"
 msgstr "État"
 
-#: src/systemd/enums.rs:928
+#: src/systemd/enums.rs:931
 msgctxt "clean"
 msgid "Cac_he"
 msgstr "Cac_he"
 
-#: src/systemd/enums.rs:929
+#: src/systemd/enums.rs:932
 msgctxt "clean"
 msgid "_Logs"
 msgstr "Journau_x"
 
-#: src/systemd/enums.rs:930
+#: src/systemd/enums.rs:933
 msgctxt "clean"
 msgid "_Configuration"
 msgstr "_Configuration"
 
-#: src/systemd/enums.rs:931
+#: src/systemd/enums.rs:934
 msgctxt "clean"
 msgid "_File Descriptor Store"
 msgstr "Magasin de descripteurs de _fichiers"
 
-#: src/systemd/enums.rs:932
+#: src/systemd/enums.rs:935
 msgctxt "clean"
 msgid "_All"
 msgstr "_Tous"
+
+#: src/utils/time_handling.rs:37
+msgctxt "pref time style"
+msgid "Pretty"
+msgstr "Joli"
+
+#: src/utils/time_handling.rs:38
+msgctxt "pref time style"
+msgid "Pretty usec"
+msgstr "Joli usec"
+
+#: src/utils/time_handling.rs:39
+msgctxt "pref time style"
+msgid "UTC"
+msgstr "UTC"
+
+#: src/utils/time_handling.rs:40
+msgctxt "pref time style"
+msgid "UTC usec"
+msgstr "UTC usec"
+
+#: src/utils/time_handling.rs:41
+msgctxt "pref time style"
+msgid "Unix"
+msgstr "Unix"
+
+#: src/utils/time_handling.rs:42
+msgctxt "pref time style"
+msgid "Unix usec"
+msgstr "Unix usec"
 
 #: src/widget/app_window/menu.rs:193
 msgid "Thank you for your support"
@@ -1523,6 +1577,70 @@ msgstr "Bus système"
 msgctxt "dbus"
 msgid "System & User Session Bus"
 msgstr "Bus système et Bus session utilisateur"
+
+#: src/widget/preferences/data.rs:208
+msgctxt "pref color scheme"
+msgid "No Preference"
+msgstr "Sans préférences"
+
+#: src/widget/preferences/data.rs:209
+msgctxt "pref color scheme"
+msgid "Prefer Dark"
+msgstr "Préfère sombre"
+
+#: src/widget/preferences/data.rs:210
+msgctxt "pref color scheme"
+msgid "Prefer Light"
+msgstr "Préfère claire"
+
+#: src/widget/preferences/data.rs:211
+msgctxt "pref color scheme"
+msgid "Force Dark"
+msgstr "Force sombre"
+
+#: src/widget/preferences/data.rs:212
+msgctxt "pref color scheme"
+msgid "Force Light"
+msgstr "Force claire"
+
+#: src/widget/preferences/data.rs:257
+msgctxt "pref orientation"
+msgid "Automatic"
+msgstr "Automatique"
+
+#: src/widget/preferences/data.rs:258
+msgctxt "pref orientation"
+msgid "Side by Side"
+msgstr "Cote à cote"
+
+#: src/widget/preferences/data.rs:259
+msgctxt "pref orientation"
+msgid "Top Bottom"
+msgstr "Dessus dessous"
+
+#: src/widget/preferences/imp.rs:429
+msgctxt "pref file style"
+msgid "None"
+msgstr "Aucun"
+
+#. pref group
+#: src/widget/preferences/imp.rs:452
+#, rust-format
+msgctxt "preference column"
+msgid "Column {}"
+msgstr "Colonne {}"
+
+#. SwitchRow
+#: src/widget/preferences/imp.rs:457
+msgctxt "preference column"
+msgid "Show"
+msgstr "Afficher"
+
+#. Spin row
+#: src/widget/preferences/imp.rs:474
+msgctxt "preference column"
+msgid "Width"
+msgstr "Largeur"
 
 #. Message answer
 #: src/widget/unit_control_panel/side_control_panel/imp.rs:130
